# libpag

linux/: .gitignore  CMakeLists.txt
linux/ffmpeg_build/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
linux/resources/20230816【大头秀】生日电视端/: head.pag
linux/resources/pag/: hou.pag  照片送祝福.pag
linux/src/: main-bak.cpp  main.cpp
